[gd_scene load_steps=8 format=3 uid="uid://seusd0ya1s2e"]

[ext_resource type="Script" path="res://tutorial_completed_menu.gd" id="1_628hg"]
[ext_resource type="Texture2D" uid="uid://bf7popw72ob6k" path="res://Assets/Main Menu Background (Blurred).png" id="1_o7pv5"]
[ext_resource type="Texture2D" uid="uid://cljqey180vuud" path="res://Assets/Tutorial Completed.png" id="2_xwqeq"]
[ext_resource type="Texture2D" uid="uid://bgi1277cjir1q" path="res://Assets/MainMenu Button.png" id="3_ur2bu"]
[ext_resource type="Texture2D" uid="uid://8xexmmimrq2a" path="res://Assets/Restart Tutorial Button.png" id="4_lln72"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wvfyf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0y3wb"]

[node name="TutorialCompletedMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_628hg")
tween_intensity = 1.1
tween_duration = 0.3

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_o7pv5")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 286.0
offset_top = 140.0
offset_right = 991.0
offset_bottom = 256.0
grow_horizontal = 2
size_flags_horizontal = 4
texture = ExtResource("2_xwqeq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -10.0
offset_right = 190.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.450648, 0.450648, 0.450648, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_wvfyf")
icon = ExtResource("4_lln72")
flat = true

[node name="MainmenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_pressed_color = Color(0.45098, 0.45098, 0.45098, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_0y3wb")
icon = ExtResource("3_ur2bu")
flat = true

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainmenuButton" to="." method="_on_mainmenu_button_pressed"]
